--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: ggseas
 Title: Stats for Seasonal Adjustment on the Fly with ggplot2
 Version: 0.0.0.9000
-Authors: Peter Ellis, peter.ellis2013nz@gmail.com, author
-Description: ggplot2 stats for seasonal adjustment on the fly
+Author: Peter Ellis <peter.ellis2013nz@gmail.com>
+Maintainer: Peter Ellis <peter.ellis2013nz@gmail.com>
+Description: Provides ggplot2 stats that estimate seasonal adjusted series on the fly for time series.
 Depends:
-    R (>= 3.2.3), seasonal
+    R (>= 3.2.3), seasonal, ggplot2 (>= 2.0.0)
 License: GPL-3
 LazyData: true
 RoxygenNote: 5.0.1
