--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ggseas
-Title: Stats for Seasonal Adjustment on the Fly with ggplot2
+Title: Stats for Seasonal Adjustment on the Fly with 'ggplot2'
 Version: 0.1.0
 Author: Peter Ellis <peter.ellis2013nz@gmail.com>
 Maintainer: Peter Ellis <peter.ellis2013nz@gmail.com>
