--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: ggseas
-Title: Stats for Seasonal Adjustment on the Fly with 'ggplot2'
+Title: 'stats' for Seasonal Adjustment on the Fly with 'ggplot2'
 Version: 0.1.0
 Author: Peter Ellis <peter.ellis2013nz@gmail.com>
 Maintainer: Peter Ellis <peter.ellis2013nz@gmail.com>
-Description: Provides 'ggplot2' 'stats' that estimate seasonal adjusted series on the fly for time series.
+Description: Provides 'ggplot2' 'stats' that estimate seasonally adjusted series 
+    on the fly for time series.
 Depends:
     R (>= 3.1.2), seasonal, ggplot2 (>= 2.0.0)
 License: GPL-3
 LazyData: true
 RoxygenNote: 5.0.1
+BugReports: https://github.com/ellisp/ggseas/issues
