--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -6,7 +6,7 @@ Maintainer: Peter Ellis <peter.ellis2013nz@gmail.com>
 Description: Provides 'ggplot2' 'stats' that estimate seasonally adjusted series 
     on the fly for time series.
 Depends:
-    R (>= 3.1.2), seasonal, ggplot2 (>= 2.0.0)
+    R (>= 3.1.2), seasonal, ggplot2 (>= 2.0.0), stats
 License: GPL-3
 LazyData: true
 RoxygenNote: 5.0.1
