let user choose which function to have in rollapplyr

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -2,10 +2,11 @@
 
 export(ggsdc)
 export(stat_decomp)
-export(stat_rollmean)
+export(stat_rollapplyr)
 export(stat_seas)
 export(stat_stl)
 export(tsdf)
 import(ggplot2)
 import(seasonal)
 import(stats)
+importFrom(zoo,rollapplyr)
