--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: ggseas
 Title: 'stats' for Seasonal Adjustment on the Fly with 'ggplot2'
-Version: 0.2.2
+Version: 0.2.3
 Author: Peter Ellis <peter.ellis2013nz@gmail.com>
 Maintainer: Peter Ellis <peter.ellis2013nz@gmail.com>
 Description: Provides 'ggplot2' 'stats' that estimate seasonally adjusted series 
-    on the fly for time series.
+    and rolling summaries such as rolling average on the fly for time series.
 Depends:
     R (>= 3.1.2), 
     seasonal, 
