--- a/pkg/.travis.yml
+++ b/pkg/.travis.yml
@@ -1,5 +1,10 @@
 # Sample .travis.yml for R projects
 
 language: r
+r:
+   - oldrel
+   - release
+   - devel
 warnings_are_errors: true
 sudo: required
+cache: packages
