warnings not errors for travis purposes

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ r:
    - oldrel
    - release
    - devel
-warnings_are_errors: true
+warnings_are_errors: false
 sudo: required
 cache: packages
 script: build.R
