--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -13,7 +13,8 @@ Depends:
     seasonal, 
     ggplot2 (>= 2.0.0), 
     stats, 
-    zoo
+    zoo,
+    devtools
 License: GPL-3
 LazyData: true
 RoxygenNote: 5.0.1
