--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,23 @@
-# Sample .travis.yml for R projects
+# copied from https://github.com/olmjo/RcppTN/blob/master/.travis.yml 
 
-language: r
-r:
-   - oldrel
-   - release
-   - devel
-warnings_are_errors: false
-sudo: required
-cache: packages
-install: 
-   - cd ./pkg
+language: R
+
+before_install:
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
+
+install:
+  - cd pkg
+  - ../travis-tool.sh install_deps
+
+
+script: ../travis-tool.sh run_tests
+
+on_failure:
+  - ../travis-tool.sh dump_logs
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
