--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ sudo: required
 
 language: R
 
+cache: packages
+
 before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
