--- a/.travis.yml
+++ b/.travis.yml
@@ -9,22 +9,26 @@ r:
   - release
   - devel
 
-cache: packages
+cache: packages # won't make any difference because with sudo on, can't use container based approach
 
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+# before_install:
+#  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+#  - chmod 755 ./travis-tool.sh
+#  - ./travis-tool.sh bootstrap
+
+r_packages:
+   - devtools
+   - testthat
 
 install:
   - cd pkg
-  - ../travis-tool.sh install_deps
+#  - ../travis-tool.sh install_deps
 
 
-script: ../travis-tool.sh run_tests
+# script: ../travis-tool.sh run_tests
 
-on_failure:
-  - ../travis-tool.sh dump_logs
+# on_failure:
+#  - ../travis-tool.sh dump_logs
 
 notifications:
   email:
