--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # copied from https://github.com/olmjo/RcppTN/blob/master/.travis.yml 
 
 # this is the only line that needed changing from olmjo's
-sudo: required
+sudo: false
 
 language: r
 r:
@@ -18,7 +18,7 @@ cache: packages # won't make any difference because with sudo on, can't use cont
 
 install:
   - cd pkg
-  - Rscript -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
+#  - Rscript -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
 
 #  - ../travis-tool.sh install_deps
 
