--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ cache: packages # won't make any difference because with sudo on, can't use cont
 #  - chmod 755 ./travis-tool.sh
 #  - ./travis-tool.sh bootstrap
 
+r_packages:
+   - devtools
+   - testthat
+
 install:
   - cd pkg
 #  - Rscript -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
