--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # copied from https://github.com/olmjo/RcppTN/blob/master/.travis.yml 
 
 # this is the only line that needed changing from olmjo's
-sudo: false
+sudo: required
 
 language: r
 r:
@@ -9,28 +9,22 @@ r:
   - release
   - devel
 
-cache: packages # won't make any difference because with sudo on, can't use container based approach
+# cache: packages # won't make any difference because with sudo on, can't use container based approach
 
-# before_install:
-#  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-#  - chmod 755 ./travis-tool.sh
-#  - ./travis-tool.sh bootstrap
-
-r_packages:
-   - devtools
-   - testthat
+before_install:
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
 
 install:
   - cd pkg
-#  - Rscript -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
-
-#  - ../travis-tool.sh install_deps
+  - ../travis-tool.sh install_deps
 
 
-# script: ../travis-tool.sh run_tests
+script: ../travis-tool.sh run_tests
 
-# on_failure:
-#  - ../travis-tool.sh dump_logs
+on_failure:
+  - ../travis-tool.sh dump_logs
 
 notifications:
   email:
