--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggseas
 Title: 'stats' for Seasonal Adjustment on the Fly with 'ggplot2'
-Version: 0.4.3.9000
+Version: 0.4.4.9000
 Authors@R: c(
    person("Peter", "Ellis", , "peter.ellis2013nz@gmail.com", c("aut", "cre")),
    person("Christophe", "Sax", role = "ctb")
@@ -18,4 +18,7 @@ License: GPL-3
 LazyData: true
 RoxygenNote: 5.0.1
 BugReports: https://github.com/ellisp/ggseas/issues
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
