import only named functions from stats

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -9,5 +9,8 @@ export(stat_stl)
 export(tsdf)
 import(ggplot2)
 import(seasonal)
-import(stats)
+importFrom(stats,decompose)
+importFrom(stats,stl)
+importFrom(stats,time)
+importFrom(stats,ts)
 importFrom(zoo,rollapplyr)
