--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggseas
 Title: 'stats' for Seasonal Adjustment on the Fly with 'ggplot2'
-Version: 0.5.2.9000
+Version: 0.5.3.9000
 Authors@R: c(
    person("Peter", "Ellis", , "peter.ellis2013nz@gmail.com", c("aut", "cre")),
    person("Christophe", "Sax", role = "ctb")
@@ -10,9 +10,10 @@ Description: Provides 'ggplot2' 'stats' that estimate seasonally adjusted series
     and rolling summaries such as rolling average on the fly for time series.
 Depends:
     R (>= 3.1.2), 
+    ggplot2 (>= 2.0.0)
+Imports:
     seasonal, 
-    ggplot2 (>= 2.0.0), 
-    stats, 
+    stats,
     zoo
 License: GPL-3
 LazyData: true
