only load in items from seasonal that are explicitly named

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -8,7 +8,8 @@ export(stat_seas)
 export(stat_stl)
 export(tsdf)
 import(ggplot2)
-import(seasonal)
+importFrom(seasonal,final)
+importFrom(seasonal,seas)
 importFrom(stats,decompose)
 importFrom(stats,stl)
 importFrom(stats,time)
