Update how ggsdc treats mapping of variables to get ready for ggplot2 2.3, by importing rlang::quo_text().  Closes #7.

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -8,6 +8,7 @@ export(stat_seas)
 export(stat_stl)
 export(tsdf)
 import(ggplot2)
+importFrom(rlang,quo_text)
 importFrom(seasonal,final)
 importFrom(seasonal,seas)
 importFrom(stats,decompose)
