--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggseas
 Title: 'stats' for Seasonal Adjustment on the Fly with 'ggplot2'
-Version: 0.5.3.9000
+Version: 0.5.4.9000
 Authors@R: c(
    person("Peter", "Ellis", , "peter.ellis2013nz@gmail.com", c("aut", "cre")),
    person("Christophe", "Sax", role = "ctb")
@@ -13,11 +13,12 @@ Depends:
     ggplot2 (>= 2.0.0)
 Imports:
     seasonal, 
+    rlang,
     stats,
     zoo
 License: GPL-3
 LazyData: true
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
 BugReports: https://github.com/ellisp/ggseas/issues
 Suggests: testthat,
     knitr,
